// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAccordion behavior closes when clicked twice 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="20"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="20"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="20"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can not see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion behavior does not open when isDisabled 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="18"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiAccordion__iconButton"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="18"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-disabled"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="18"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You cannot see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion behavior opens when clicked once 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="17"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton euiAccordion__iconButton-isOpen emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="17"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
    id="17"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion behavior opens when div is clicked if element is a div 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="19"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton euiAccordion__iconButton-isOpen emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="19"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
    id="19"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion behavior restores tabbable children on accordion open 1`] = `
<div
  class="euiAccordion__children emotion-euiAccordion__children"
>
  <button>
    tabbable item one
  </button>
  <input
    placeholder="tabbable item two"
    type="text"
  />
  <a
    href="#"
  >
    tabbable item three
  </a>
  <div
    tabindex="0"
  >
    tabbable item four
  </div>
</div>
`;

exports[`EuiAccordion behavior sets tabbable children to \`tabIndex={-1}\` when accordions are closed 1`] = `
<div
  class="euiAccordion__children emotion-euiAccordion__children"
>
  <button
    tabindex="-1"
  >
    tabbable item one
  </button>
  <input
    placeholder="tabbable item two"
    tabindex="-1"
    type="text"
  />
  <a
    href="#"
    tabindex="-1"
  >
    tabbable item three
  </a>
  <div
    data-original-tabindex="0"
    tabindex="-1"
  >
    tabbable item four
  </div>
</div>
`;

exports[`EuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="0"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="0"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion isDisabled is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="16"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiAccordion__iconButton"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="16"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button-disabled"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="16"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay none is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="9"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="9"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay right is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="8"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <button
      aria-controls="8"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton euiAccordion__iconButton--right emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-arrowRight"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="8"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowProps is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="10"
      aria-expanded="false"
      aria-label="aria-label"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton testClass1 testClass2 emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-euiTestCss"
      data-test-subj="test subject string"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="10"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="10"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContent is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="3"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="3"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <div>
          Button content
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="3"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="2"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="2"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent button content class name"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="2"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonElement is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="5"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <div
      aria-controls="5"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="5"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-label="aria-label"
      class="euiAccordion__button testClass1 testClass2 emotion-euiAccordion__button-euiTestCss"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="4"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props element is rendered 1`] = `
<fieldset
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="1"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <legend
      aria-controls="1"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </legend>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="1"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiAccordion props extraAction is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="6"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="6"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion__optionalAction"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="6"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props forceState closed is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="11"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="11"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="11"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can not see me
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props forceState open is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="12"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton euiAccordion__iconButton-isOpen emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="12"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
    id="12"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can see me
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="7"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton euiAccordion__iconButton-isOpen emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="7"
      aria-expanded="true"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
    id="7"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children emotion-euiAccordion__children"
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props isLoading is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="14"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="14"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion__optionalAction"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="14"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children euiAccordion__children-isLoading emotion-euiAccordion__children-isLoading"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props isLoadingMessage is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper emotion-euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="15"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__iconButton emotion-euiButtonIcon-xs-empty-text-euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="15"
      aria-expanded="false"
      class="euiAccordion__button emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction emotion-euiAccordion__optionalAction"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper"
    id="15"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children euiAccordion__children-isLoading emotion-euiAccordion__children-isLoading"
      >
        <span
          aria-label="Loading"
          class="euiLoadingSpinner euiAccordion__spinner emotion-euiLoadingSpinner-m-euiAccordion__spinner"
          role="progressbar"
        />
        <div
          class="euiText emotion-euiText-s"
        >
          <p>
            Please wait
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
